get paths