@@ -2,6 +2,7 @@ package org.powertester.utils;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class FileUtils {
   private FileUtils() {
@@ -10,7 +11,7 @@ public class FileUtils {
 
   public static void createDirectory(String directoryPath) {
     try {
-      Path path = Path.of(directoryPath);
+      Path path = Paths.get(directoryPath);
       Files.createDirectory(path);
     } catch (Exception exception) {
       exception.printStackTrace();
